// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidatorRow > should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0xB8Be76b31E402a2D89294Aa107056484Bef94362
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center bg-transparent rounded border-none duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-primary-600 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0xB8Be76b31E402a2D89294Aa107056484Bef94362
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center bg-transparent rounded border-none duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-primary-600 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render changed style when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-warning-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-warning-600 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-warning-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-warning-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0xB8Be76b31E402a2D89294Aa107056484Bef94362
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 bg-theme-warning-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-warning-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0! bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="ValidatorVoteAmount"
        >
          <div
            class="flex justify-center items-center px-3 my-1 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-11 bg-theme-warning-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-warning-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="flex overflow-hidden items-center px-4 space-x-2 w-full rounded border transition-colors duration-200 appearance-none text-theme-text border-theme-secondary-400 bg-theme-background h-[34px] dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                >
                  <div
                    class="flex relative flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base! text-right focus:text-left pr-8"
                      data-testid="InputCurrency"
                      name="amount"
                      placeholder="0"
                      type="text"
                      value="30"
                    />
                  </div>
                </div>
              </div>
              <span
                class="flex absolute inset-y-0 right-7 items-center space-x-3"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-text"
                >
                  Mainsail
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 bg-theme-warning-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-warning-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-warning-700 dark:hover:text-theme-primary-500 hover:text-theme-warning-800 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Changed
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the selected validator 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-success-100 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-success-600 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-success-100 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-success-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0xB8Be76b31E402a2D89294Aa107056484Bef94362
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 bg-theme-success-100 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-success-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0! bg-theme-success-100 dark:bg-theme-background dark:border-theme-success-600"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 bg-theme-success-100 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-success-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center bg-transparent rounded border-none duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-primary-reverse-600 dark:text-theme-primary-reverse-600 dark:hover:text-theme-primary-reverse-700 hover:text-theme-primary-reverse-700 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Selected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the selected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-primary-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-primary-600 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-primary-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-primary-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0xB8Be76b31E402a2D89294Aa107056484Bef94362
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 bg-theme-primary-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-primary-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0! bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 bg-theme-primary-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-primary-600 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center bg-transparent rounded border-none duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-primary-600 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0x03BC306C369A55c0336EB003bB07F29E5c150F36
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center bg-transparent rounded border-none duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-primary-600 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0x56F925416Ef2725646442D5E0150088bd7202aCd
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <span
                class="w-full sm:w-auto"
              >
                <button
                  class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center text-black bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] dark:disabled:text-theme-secondary-700 dark:hover:text-theme-primary-500 dark:text-theme-black hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
                  data-testid="DelegateRow__toggle-2"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Select
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render the unselected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-danger-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-danger-400 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 bg-theme-danger-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-danger-400 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0xB8Be76b31E402a2D89294Aa107056484Bef94362
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 bg-theme-danger-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-danger-400 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0! bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 bg-theme-danger-50 dark:group-hover:bg-theme-dark-950 dark:bg-theme-background dark:border-theme-danger-400 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center bg-transparent rounded border-none duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-danger-400 dark:text-theme-danger-400 dark:hover:text-theme-danger-500 hover:text-theme-danger-500 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Unselected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ValidatorRow > should render when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 pl-3 my-0 ml-3 h-9 text-sm font-semibold rounded-l border-2 border-r-0 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-0 space-x-3 h-9 text-sm font-semibold border-t-2 border-b-2 border-transparent transition-colors duration-100 leading-[17px] min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex overflow-hidden justify-start items-center space-x-2 w-full whitespace-nowrap"
            >
              <div
                class="relative text-left sm:leading-5 grow leading-[17px]"
              >
                <span
                  class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px]"
                  data-testid="Address__address"
                >
                  0xB8Be76b31E402a2D89294Aa107056484Bef94362
                </span>
                <span>
                   
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex justify-center items-center px-3 my-0 h-9 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-secondary-200 text-theme-secondary-700 min-w-[58px] py-[3px] dark:border-theme-dark-700 dark:text-theme-dark-200"
              data-testid="ValidatorStatus__standby"
            >
              Standby
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 justify-center border-t-2 border-b-2 border-transparent text-sm leading-[17px] h-9 min-h-9 my-0!"
          >
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-secondary-700 w-24 md:w-auto"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
              >
                <span>
                  View
                </span>
              </span>
              <div
                class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="ValidatorVoteAmount"
        >
          <div
            class="flex justify-center items-center px-3 my-1 border-t-2 border-b-2 border-transparent transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="flex overflow-hidden items-center px-4 space-x-2 w-full rounded border transition-colors duration-200 appearance-none text-theme-text border-theme-secondary-300 bg-theme-secondary-100 h-[34px] dark:border-theme-secondary-700 dark:bg-theme-secondary-800"
                >
                  <div
                    class="flex relative flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none sm:text-base! text-right focus:text-left pr-8 text-theme-secondary-text"
                      data-testid="InputCurrency"
                      disabled=""
                      name="amount"
                      placeholder="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="flex absolute inset-y-0 right-7 items-center space-x-3 cursor-default"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-secondary-400 dark:text-theme-secondary-700"
                >
                  Mainsail
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-30 min-w-32"
        >
          <div
            class="flex justify-end items-center px-3 pr-3 my-1 mr-3 h-9 rounded-r border-2 border-l-0 border-transparent transition-colors duration-100 min-h-9 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="-mr-0.5 leading-[17px]"
            >
              <button
                class="inline-flex relative justify-center items-center p-3 py-0 -mr-3 w-auto text-sm font-semibold text-center bg-transparent rounded border-none duration-100 ease-linear cursor-pointer dark:bg-transparent hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden leading-[17px] text-theme-primary-600 dark:text-theme-primary-600 dark:hover:text-theme-primary-700 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
